objects/GenAIFeedbackDetail__dll.object
<CustomObject>
    <fields>
        <fullName>KQ_feedbackDetailId__c</fullName>
        <label>KQ_feedbackDetailId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_parent__c</fullName>
        <label>KQ_parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appFeedback__c</fullName>
        <label>appFeedback</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feature__c</fullName>
        <label>feature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feedbackDetailId__c</fullName>
        <label>feedbackDetailId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feedbackText__c</fullName>
        <label>feedbackText</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>orgId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parent__c</fullName>
        <label>parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>